welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: not found: value m
m = litMessage()
^BDR2:3: error: not found: value m
m match {
^